commit for alignment issue

--- a/MitosisTimesheet/src/main/webapp/css/style.css
+++ b/MitosisTimesheet/src/main/webapp/css/style.css
@@ -155,11 +155,11 @@ white-space: nowrap;
 }
 
 .table th {
-	text-align: center;
+	text-align: left;
 }
 
 .table tbody td {
-	text-align: center;
+	text-align: left;
 	 white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -262,9 +262,8 @@ width:30%;
  	padding-left: 10px;
  }
 h2 {
-	float: left;
 	color: gray;
-	margin-left: 30%;
+	text-align: center;
 }
 
 @media ( max-width : 450px) {
